--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 <div><h4>type</h4></div>
 <div><h4>weight</h4></div>
 <div><h4>price</h4></div>
-<div><h4>making-charge</h4></div>
+<div><h4>m.c.</h4></div>
 <div><h4>add-on</h4></div>
 <div><h4>Total</h4></div>
 
 </div>
-<div id="display">
+<div id="display" >
 
 </div>
 
