--- a/img/index.html
+++ b/img/index.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="main1.js"></script>
+    <style>
+img{
+  width:200px;
+  height:200px;
+}
+
+    </style>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
-    </nav>z
-    <main>
-      <h1>My other page</h1>
+    
+  
+      <input type="file" id="filetag">
+<img src="" id="preview">
     </main>
   </body>
 </html>
