--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="data-field.css" />
     <link rel="stylesheet" href="head.css" />
+    <link rel="stylesheet" href="popup.css" />
+
     <script type="module" src="script.js"></script>
   </head>
   <body>
