--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 </div>
 <div id="total_calculation">
 <div>
-  <div>discount <input type="number"></div>
-<div>Paid Amount : <span></span></div>
+  <div>discount <input type="number" id="final_discount"></div>
+<div>Paid Amount : <span id="all_total_amount"></span></div>
 <button>Print</button>
 </div>
 
