--- a/index.html
+++ b/index.html
@@ -25,30 +25,41 @@
 <div id="most_main_div">
 <div id="head">
 <h1 id="shop_name">Bhawani jewellers</h1>
+
 <h3 id="shop_website">www.bjgold.in</h3>
 
 
 
 <div id="adress_and_customer_info">
 <div id="customer_info">
- <span><b>Name:XXX
+  <div>
+ <span><b>Name:
    </b>
  </span>
+ <span contenteditable="true" style="padding:4px">_____
+
+</span>
  <br>
 
  <span><b>    Adress:
 </b>
 </span>
+<span contenteditable="true" style="padding:4px">_____
 
+</span>
 <br>
 <span><b>Date:
 </b>
 </span>
-<span id="date_update"><b>today date
-</b>
+<span id="date_update" contenteditable="true" style="padding:4px"><bold>today date
+</bold>
 </span>
  <br>
 </div>
+</div>
+<div id="bis_logo_div">
+  <img id="bis_logo_img" src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f8/Bureau_of_Indian_Standards_Logo.svg/1200px-Bureau_of_Indian_Standards_Logo.svg.png" alt="">
+  </div>
 <div id="div_adress">
   <address id="shop_adress"> 
     <p>near purani durga mandir</p>
@@ -98,8 +109,8 @@
 </div>
 <div id="total_calculation">
 <div>
-  <div><span id="final_discount_hide"> discount <input type="number" id="final_discount"></span></div>
-<div>Paid Amount : <span id="all_total_amount"></span></div>
+  <div><span id="final_discount_hide"> discount: <input type="number" id="final_discount"><span>rs</span></span></div>
+<div>Paid Amount : <span id="all_total_amount"></span><span>rs</span></div>
 <button id="print_hide">Print</button>
 </div>
 
