--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 </div>
 <div id="bis_logo_div">
-  <img id="bis_logo_img" src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f8/Bureau_of_Indian_Standards_Logo.svg/1200px-Bureau_of_Indian_Standards_Logo.svg.png" alt="">
+  <img id="bis_logo_img" src="bis_logo.svg" alt="bis logo">
   </div>
 <div id="div_adress">
   <address id="shop_adress"> 
