1 file modified, 1 added, 1 deleted

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 </div>
 <div id="bis_logo_div">
-  <img id="bis_logo_img" src="bis_logo.svg" alt="bis logo">
+  <img id="bis_logo_img" src="bis_logo.svg.png" alt="bis logo">
   </div>
 <div id="div_adress">
   <address id="shop_adress"> 
