licence_number_in logo added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 </div>
 </div>
 <div id="bis_logo_div">
-  <img id="bis_logo_img" src="bis_logo.svg.png" alt="bis logo">
+  <div><img id="bis_logo_img" src="bis_logo.svg.png" alt="bis logo">
+    <p>5390143016</p></div>
+  
   </div>
 <div id="div_adress">
   <address id="shop_adress"> 
