css on discount

--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
 </div>
 <div id="total_calculation">
 <div>
-  <div><span id="final_discount_hide"> discount: <input type="number" id="final_discount"><span></span></span></div>
-<div>Paid Amount : <span id="all_total_amount"></span><span>rs</span></div>
+  <div><span id="final_discount_hide"> discount: <input type="number" id="final_discount" 
+    ><span>rs</span></span></div>
+<div>Paid Amount : <span id="all_total_amount"></span><span> rs</span></div>
 <button id="print_hide">Print</button>
 </div>
 
