--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 <div id="bis_logo_div">
   <div><img id="bis_logo_img" src="bis_logo.svg.png" alt="bis logo">
-    <p>5390143016</p></div>
+    <h4>5390143016</h4></div>
   
   </div>
 <div id="div_adress">
