--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 </div>
 <div id="bis_logo_div">
-  <div><img id="bis_logo_img" src="bis_logo.svg.png" alt="bis logo">
+  <div><img id="bis_logo_img" src="https://gitkrishnaa.github.io/bill1/bis_logo.svg.png" alt="bis logo">
     <h4>5390143016</h4></div>
   
   </div>
