--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 <div id="bis_logo_div">
   <div><img id="bis_logo_img" src="https://gitkrishnaa.github.io/bill1/bis_logo.svg.png" alt="bis logo">
-    <h4>5390143016</h4></div>
+    <h4>licence no.-5390143016</h4></div>
   
   </div>
 <div id="div_adress">
